--- a/table-styles.css
+++ b/table-styles.css
@@ -25,3 +25,36 @@ body {
   color: #343a40;
   line-height: 1;
 }
+
+table {
+  width: 800px;
+  margin: 0 auto;
+  margin-top: 100px;
+  font-size: 18px;
+  /* border: 1px solid #343140;*/
+  border-collapse: collapse;
+}
+
+th,
+td {
+  /* border: 1px solid #343140; */
+  padding: 16px 24px;
+  text-align: left;
+}
+
+thead tr {
+  background-color: #087f50;
+  color: #fff;
+}
+
+thead th {
+  width: 25%;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: #f8f9fa;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #e9ecef;
+}
